[package]
name = "dxos"
version = "0.1.0"
edition = "2021"

[dependencies]
# VGA + concurrency / volatile
spin = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# keyboard decoding and x86 helpers
pc-keyboard = "0.8"
x86_64 = "0.15"

# PIC (Programmable Interrupt Controller)
pic8259 = "0.10.1"

# bootloader
bootloader = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
